--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,6 @@ html, body {
 }
 
 .PageContent {
-	display: table;
 	width: 100%;
 	height: 80%;
 	/*height: 93%;*/
@@ -33,11 +32,11 @@ html, body {
 
 .CreaturesBox {
 	min-width: 300px;
-	display: table-cell;
+	display: inline-block;
 	background: white;
-	height: inherit;
+	height: 100%;
+	max-height:100%;
 	border: solid 1px black;
-	overflow: scroll;
 	position: relative;
 	margin: 0;
 	padding: 0;
@@ -49,13 +48,13 @@ html, body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	white-space:nowrap;
+	overflow: auto;
 }
 
 .chartContainer {
 	width: inherit;
-	display: table-cell;
-	height: inherit;
+	display: inline-block;
+	height: 100%;
 	background: #368caf;
 	padding: 0;
 	margin: 0;
