--- a/css/index.css
+++ b/css/index.css
@@ -4,12 +4,13 @@ html, body {
 	padding: 0;
 	margin: 0;
 	white-space:nowrap;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 #titleBox {
 	padding: 0;
 	height: 80px;
+	width: 1024px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: green;
@@ -25,22 +26,26 @@ html, body {
 }
 
 .PageContent {
-	width: 100%;
-	height: 80%;
+	width: 1024px;
+	height: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	white-space:nowrap;
 	/*height: 93%;*/
 }
 
 .CreaturesBox {
-	min-width: 300px;
-	display: inline-block;
-	background: white;
+	min-width: 250px;
+	float: left;
+	background: lightgrey;
 	height: 100%;
 	max-height:100%;
-	border: solid 1px black;
+	
 	position: relative;
 	margin: 0;
 	padding: 0;
 	vertical-align: top;
+	overflow-x:hidden;
 }
 
 .CreaturesList {
@@ -48,16 +53,18 @@ html, body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	overflow: auto;
+	overflow-y: auto;
+
 }
 
 .chartContainer {
-	width: inherit;
-	display: inline-block;
+	width: 774px;
 	height: 100%;
+	display: inline-block;
 	background: #368caf;
 	padding: 0;
 	margin: 0;
+	vertical-align: top; 
 }
 
 .HiddenInfoBox {
