--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ html, body {
 	padding: 0;
 	margin: 0;
 	white-space:nowrap;
-	background-image:url(../images/dinobg.jpg);
+	background-image:url("../images/dinobg.jpg");
 	background-size:cover;
 	overflow: hidden;
 }
