--- a/css/d3.slider.css
+++ b/css/d3.slider.css
@@ -3,7 +3,7 @@
 	background-color: rgba(0,0,0, 0.8);
 	padding:0;
 	margin: 0;
-	height: 70px;
+	height: 150px;
 }
 
 .d3slider-rect-range {
@@ -86,4 +86,8 @@
   z-index: 1;
 }
 
+#sliderMappingLine {
+	stroke: white;
+	stroke-width: 2;
+}
 
