Move minimap view port to css Change minimap viewport color to red

--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,14 @@ Our Map Container
 	vertical-align: top; 
 }
 
-
+/*
+The screen representative box on the minimap
+*/
+#viewport {
+	stroke: red;
+	stroke-width: 10;
+	fill: none;
+}
 
 /*=============================================================================
 The slider bar section
