--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -92,19 +92,52 @@ Popup window css
 .resizeableTextBox {
 	display: none;
 	text-align: left;
-	padding: 0;
+	padding-left: 5px;
+	padding-right: 5px;
 	margin: 0;
+	vertical-align: top;
 }
 
-.resizeableTextBox li {
-	background-color: lightgrey;
-}
 
-.resizeableTextBox p, .resizeableTextBox h2 {
+.resizeableTextBox p, .resizeableTextBox h2, .resizeableTextBox h3 {
 	padding: 0px;
 	margin: 0px;
+	text-indent: 20px;
 }
 
 .resizeableTextBox h2 {
 	text-align: center;
+	white-space: pre-line;      /* CSS3 */   
+	white-space: -moz-pre-line; /* Firefox */    
+	white-space: -pre-line;     /* Opera <7 */   
+	white-space: -o-pre-line;   /* Opera 7 */    
+}
+
+.resizeableTextBox li {
+	display: block;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	list-style-type: decimal;
+	list-style-position: inside;
+}
+
+.clusterListLI {	
+	width: 100%;
+	height: 50px;
+	background-color: lightgrey;
+}
+
+.clusterInner {
+	float: center;
+}
+
+a.clusterLIImg {
+	text-align: center;
+	display: block;
+	
+}
+
+div.clusterLIInfo{
+	display: inline;
+	padding-right: 20px;
 }
