--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,27 @@ html, body {
 	padding: 0;
 	margin: 0;
 	white-space:nowrap;
-	background-image:url(../images/dinobg.jpg);
-	background-size:cover;
+	/*background-image:url(../images/dinobg.jpg);
+	background-size:cover;*/
 	overflow-x: hidden;
 	overflow-y: auto;
 }
+
+.background {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+
+	/*background-image:url(../images/background1.jpg);*/
+	background-size:cover;
+	display: inline;
+
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+	z-index: -1;
+}
+
 
 /*
 $(body).css("background-image", "url(../images/dinobg.jpg)");
