Fix constant pinging of GBIF Add red circle around selected creature icon

--- a/css/index.css
+++ b/css/index.css
@@ -162,6 +162,11 @@ Title Box, and Nav bar elements
 	text-decoration: underline;
 }
 
+#navBar li:hover {
+	cursor: pointer;
+	color: #99FFFF;
+}
+
 #searchBar {
 	float: right;
 	display: inline;
