Add loading message to description popup window Fix creature listing title background not changing color when a species is searched

--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,8 @@ About Box Popup.
 .AboutMenuBox #aboutCloseButton {
 	width: 400px;
 	height: 40px;
-	margin-top: 50px;
+	margin-top: 30px;
+	-webkit-box-sizing: initial;
 }
 
 
